--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>OptimizedHTML 5</title>
+	<title>MartaUP</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
 	<meta name="viewport" content="width=device-width">
@@ -19,27 +19,30 @@
 
 <body>
 
-	<!-- Custom HTML / Remove before use -->
-
-	<div class="container">
-
-		<div class="parent"> <!-- Lazy Load Placeholder Generator: https://webdesign-master.ru/services/lazy/ -->
-			<img class="lazy img-responsive example-img"
-			src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-			data-src="img/@1x/preview.jpg"
-			data-srcset="img/@1x/preview.jpg 1x, img/@2x/preview.jpg 2x"
-			alt="Start HTML5 Template">
-		</div>
-		<br>
-		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
-		<p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipisicing elit. <em>Ad distinctio animi</em>, dolorum eaque praesentium unde aliquid, mollitia itaque voluptate quos modi et incidunt tempora fugiat voluptatum quia esse dolor repellat.</p>
-		<br>
-		<div class="example-grid">
-			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quo vero molestias, esse doloribus corrupti, nemo minus ullam tempore tenetur magni aut quos soluta sit adipisci eius expedita amet non.</div>
-			<div>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</div>
-		</div>
-
-	</div>
+	<header class="header">
+	    <div class="container">
+	        <div class="header__top">
+	            <div class="logo"></div>
+	                <a href="#">
+	                    <img src="img/_src/Logo.svg" alt="Логотип MartaUp">
+	                </a>
+	                
+	            <nav class="menu">
+	                <ul class="menu__list">
+	                    <li><a href="#">Home</a></li>
+	                    <li><a href="#">Work</a></li>
+	                    <li><a href="#">About</a></li>
+	                    <li><a href="#">Contact</a></li>
+	                </ul>
+	            </nav>
+	            
+	            <div class="header-btn">
+	                <a href="#" class="login">login</a>
+	                <a href="#" class="sign-up">sign up</a>
+	            </div>
+	        </div>
+	    </div>
+	</header>
 
 	<script src="js/scripts.min.js"></script>
 
