--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,9 @@
 	            </div>
 	                
 	            <nav class="menu">
+                    <div class="menu__btn">
+                        <span></span>
+                    </div>
 	                <ul class="menu__list">
 	                    <li><a href="#">Home</a></li>
 	                    <li><a href="#">Work</a></li>
